[package]
name = "events"
version = "0.1.0"
edition = "2021"
authors = ["Jesse Greenough"]
description = ""

[dependencies]
std = { optional = true }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "sync", "macros", "time"] }
tokio-test = "0.4.4"
dashmap = "6.1.0"
futures = "0.3.31"

[features]
no_std = []